Update some German translation strings.
Submitted by: Axel Gembe
See: #5475


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7139 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -17,6 +17,7 @@
  * Justin Francis
  * Markus Fuchs                   
  * Lele Gaifax
+ * Axel Gembe
  * Eric Gillespie                 epg@netbsd.org
  * Daniel Kahn Gillmor
  * Matthew Good                   trac@matt-good.net
