--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
-Trac 0.11rc1 'Genshi' (April 30, 2008)
-http://svn.edgewall.org/repos/trac/tags/trac-0.11rc1
+Trac 0.11rc2 'Genshi' (June 9, 2008)
+http://svn.edgewall.org/repos/trac/tags/trac-0.11rc2
 
- Trac 0.11rc1 contains a great number of new features, improvements and
+ Trac 0.11rc2 contains a great number of new features, improvements and
  bug fixes. The following list contains only a few highlights:
 
  * New template engine for generating content (Genshi)
@@ -18,6 +18,11 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.11rc1
  A more complete list of new features can be found in the RELEASE file.
  The complete list of closed tickets can be found here:
    http://trac.edgewall.org/query?status=closed&milestone=0.11
+
+Trac 0.11rc1 'Genshi' (April 30, 2008)
+http://svn.edgewall.org/repos/trac/tags/trac-0.11rc1
+
+  See 0.11rc2
 
 Trac 0.11b2 'Genshi' (March 12, 2008)
 http://svn.edgewall.org/repos/trac/tags/trac-0.11b2
