--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,22 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.11b1
 
  See 0.11b2.
 
+Trac 0.10.5 (Jun 23, 2008)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.5
+
+ Trac 0.10.5 contains two security fixes and a couple of bug fixes.
+ The following list contains only a few highlights:
+ 
+ * Fixes a cross-site redirection vulnerability in the quickjump function
+   reported by Russ McRee.
+ * Fixes a wiki engine XSS vulnerability found by Nathan Collins.
+ * Added PostgreSQL 8.3 support.
+ * Fixes FineGrainedPermissions for scoped repositories.
+ * Fixes problem with repository syncing raising exceptions.
+
+ The complete list of closed tickets can be found here:
+   http://trac.edgewall.org/query?status=closed&milestone=0.10.5
+
 Trac 0.10.4 (April 20, 2007)
 http://svn.edgewall.org/repos/trac/tags/trac-0.10.4
 
