Change ressource to resource in order to fix the substitution name.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7269 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/locale/pt_PT/LC_MESSAGES/messages.po
+++ b/trac/locale/pt_PT/LC_MESSAGES/messages.po
@@ -164,7 +164,7 @@ msgstr "O bilhete contém caracteres ASCII inválidos. Por favor modifique "
 #: trac/perm.py:47
 #, python-format
 msgid "%(perm)s privileges are required to perform this operation on %(resource)s"
-msgstr "São necessários os privilégios %(perm)s para efectuar esta operação em %(ressource)s" 
+msgstr "São necessários os privilégios %(perm)s para efectuar esta operação em %(resource)s" 
 
 #: trac/perm.py:49
 #, python-format
