Fix keyword substitute in msgstr by providing the correct type.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7271 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/trac/locale/nb_NO/LC_MESSAGES/messages.po
@@ -2624,7 +2624,7 @@ msgstr ""
 #: trac/versioncontrol/api.py:163
 #, python-format
 msgid "No changeset %(rev)s in the repository"
-msgstr "Endringssett %(rev) finnes ikke i kildekodelager"
+msgstr "Endringssett %(rev)s finnes ikke i kildekodelager"
 
 #: trac/versioncontrol/api.py:165
 msgid "No such changeset"
